--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-move": "sh_scripts/test.sh",
-    "deploy-move": "sh_scripts/deploy.sh",
-    "upgrade-move": "sh_scripts/upgrade.sh"
+    "gen-abi": "./gen_abi.sh"
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.13.3",
